# veloterm

./: .gitignore  .mcp.json  CLAUDE.md  COMMIT_HYGIENE.md  Cargo.toml  IMPLEMENTATION_PLAN.md  REQUIREMENTS.md  projectVeloTerm  run.sh  take-screenshot.sh  ui-guide.md
.github/workflows/: linux-ci.yml
architect/: architecture.md  cross-cutting.md  dependency-graph.md  execution-sequence.md  interfaces.md
architect/discovery/: discovery-log.md
architect/hooks/: 01-constraint-update-check.md  02-interface-verification.md  03-discovery-check.md  04-phase-validation.md  05-wave-sync.md  README.md
architect/references/: architecture-patterns.md  classification-guide.md  cross-cutting-catalog.md
conductor/: product-guidelines.md  product.md  tech-stack.md  tracks.md  ui-guide.md  workflow.md
conductor/code_styleguides/: rust.md
conductor/tracks/03_config_20260207/: brief.md  metadata.json  plan.md  spec.md
conductor/tracks/04_pane_layout_20260207/: brief.md  metadata.json  plan.md  spec.md
conductor/tracks/05_pane_ui_20260207/: brief.md  metadata.json  plan.md  spec.md
conductor/tracks/06_tabs_20260207/: brief.md  metadata.json  plan.md  spec.md
conductor/tracks/07_perf_damage_20260207/: brief.md  metadata.json  plan.md  spec.md
conductor/tracks/08_url_detection_20260207/: brief.md  metadata.json  plan.md  spec.md
conductor/tracks/09_scrollback_search_20260207/: brief.md  metadata.json  plan.md  spec.md
conductor/tracks/10_shell_integration_20260207/: brief.md  metadata.json  plan.md  spec.md
conductor/tracks/11_vi_mode_20260207/: brief.md  metadata.json  plan.md  spec.md
conductor/tracks/12_session_persistence_20260207/: brief.md  metadata.json
conductor/tracks/13_command_palette_20260207/: brief.md  metadata.json
conductor/tracks/14_quick_terminal_20260207/: brief.md  metadata.json
conductor/tracks/15_font_padding_20260208/: brief.md  metadata.json  plan.md  spec.md
conductor/tracks/16_cursor_input_20260208/: brief.md  metadata.json  plan.md  spec.md
conductor/tracks/17_selection_clipboard_20260208/: brief.md  metadata.json  plan.md  spec.md
conductor/tracks/18_scrollback_scrollbar_20260208/: brief.md  metadata.json  plan.md  spec.md
conductor/tracks/19_tab_management_20260208/: brief.md  metadata.json  plan.md  spec.md
conductor/tracks/20_context_menus_20260208/: brief.md  metadata.json
conductor/tracks/21_theme_colors_20260208/: brief.md  metadata.json  plan.md  spec.md
conductor/tracks/22_shell_hardening_20260208/: brief.md  metadata.json
conductor/tracks/23_iced_foundation_20260209/: brief.md  metadata.json
conductor/tracks/24_iced_ui_chrome_20260209/: brief.md  metadata.json
conductor/tracks/25_glyphon_text_20260209/: brief.md  metadata.json
conductor/tracks/26_ui_chrome_redesign_20260209/: brief.md  metadata.json
conductor/tracks/27_linux_centos9_20260224/: brief.md  metadata.json  plan.md  spec.md
conductor/tracks/36_veloterm_mcp_server/: plan.md
docs/: linux-build.md  platform-differences.md
mcp-server/: package-lock.json  package.json
mcp-server/src/: constants.ts  index.ts
shaders/: grid.wgsl  image.wgsl  overlay.wgsl
shell/: bash-integration.sh  fish-integration.fish  zsh-integration.sh
src/: command_palette.rs  context_menu.rs  header_bar.rs  hotkey.rs  lib.rs  main.rs  markdown_preview.rs  scroll.rs  session.rs  split_panel.rs  status_bar.rs  window.rs
src/conductor/: mod.rs  model.rs  parser.rs
src/config/: mod.rs  theme.rs  types.rs  watcher.rs
src/file_browser/: actions.rs  git_status.rs  mod.rs  preview.rs  search.rs  tree.rs  view.rs  watcher.rs
src/git_review/: diff.rs  diff_view.rs  hunk_staging.rs  hunk_state.rs  inline_diff.rs  mod.rs  operations.rs  status.rs  syntax_highlight.rs  view.rs
src/image_protocol/: decode.rs  image_store.rs  kitty_parser.rs  mod.rs  response.rs
src/input/: clipboard.rs  mod.rs  mouse.rs  selection.rs
src/link/: detector.rs  mod.rs  opener.rs
src/pane/: divider.rs  header.rs  interaction.rs  mod.rs
src/platform/: linux.rs  macos.rs
src/pty/: mod.rs
src/renderer/: coretext_raster.rs  coretext_rasterizer.rs  cursor.rs  damage.rs  glyph_atlas.rs  gpu.rs  grid_renderer.rs  iced_layer.rs  image_renderer.rs  mod.rs
src/search/: highlight.rs  mod.rs  overlay.rs
src/shell_integration/: listener.rs  mod.rs
src/tab/: bar.rs  mod.rs
src/terminal/: grid_bridge.rs  mod.rs
src/vi_mode/: mod.rs
(+20 files in other folders)
