[package]
name = "veloterm"
version = "0.1.0"
edition = "2021"
description = "A cross-platform, GPU-accelerated terminal emulator with native split panes"

[dependencies]
# Window + Event Loop
winit = "0.30"

# GPU Rendering
wgpu = "27"

# iced UI framework (integration mode — sharing wgpu device/queue)
iced_wgpu = "0.14"
iced_winit = "0.14"
iced_widget = "0.14"
iced_runtime = "0.14"
iced_graphics = "0.14"
iced_core = "0.14"

# Text Rendering
cosmic-text = "0.12"

# Utilities
log = "0.4"
env_logger = "0.11"
unicode-width = "0.2"
bytemuck = { version = "1", features = ["derive"] }
pollster = "0.4"
anyhow = "1"

# Terminal Emulation
alacritty_terminal = "0.25"

# Clipboard
arboard = "3"

# PTY Management
portable-pty = "0.9"

# Threading
crossbeam-channel = "0.5"

# Link Detection
linkify = "0.10"

# Search
regex = "1"

# Configuration
toml = "0.8"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
notify = "8"

# Image encoding
image = "0.25"
libc = "0.2.180"

# Global hotkey registration
global-hotkey = "0.6"

[target.'cfg(target_os = "macos")'.dependencies]
core-graphics = "0.23"
objc2 = "0.6"
objc2-foundation = "0.3"
objc2-app-kit = { version = "0.3", features = ["NSMenu", "NSMenuItem", "NSEvent", "NSApplication", "NSView", "NSWindow", "NSResponder", "NSColor"] }

[dev-dependencies]
tempfile = "3"
