[package]
name = "veloterm"
version = "0.1.0"
edition = "2021"
description = "A cross-platform, GPU-accelerated terminal emulator with native split panes"
license = "MIT"
repository = "https://github.com/luisdeburnay/veloterm"
authors = ["Luis de Burnay"]
rust-version = "1.87"

[dependencies]
# Window + Event Loop
winit = "0.30"

# GPU Rendering
wgpu = "27"

# iced UI framework (integration mode — sharing wgpu device/queue)
iced_wgpu = { version = "0.14", features = ["image"] }
iced_winit = "0.14"
iced_widget = { version = "0.14", features = ["markdown", "highlighter", "image"] }
iced_runtime = "0.14"
iced_graphics = "0.14"
iced_core = "0.14"

# Text Rendering
cosmic-text = "0.12"

# Utilities
log = "0.4"
env_logger = "0.11"
unicode-width = "0.2"
bytemuck = { version = "1", features = ["derive"] }
pollster = "0.4"
anyhow = "1"

# Terminal Emulation
alacritty_terminal = "0.25"

# Clipboard
arboard = "3"

# PTY Management
portable-pty = "0.9"

# Threading
crossbeam-channel = "0.5"

# Link Detection
linkify = "0.10"

# Search
regex = "1"

# Configuration
toml = "0.8"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
chrono = { version = "0.4", features = ["serde"] }
pulldown-cmark = "0.12"
notify = "8"

# Syntax highlighting
syntect = { version = "5", default-features = false, features = ["default-fancy"] }

# Image encoding
image = "0.25"
libc = "0.2.180"

# Global hotkey registration
global-hotkey = "0.6"

# Fuzzy search
nucleo-matcher = "0.3"

# Git operations
git2 = "0.19"

# Word-level diffing
similar = "2"

# File operations
trash = "5"
open = "5"

[target.'cfg(target_os = "macos")'.dependencies]
core-graphics = "0.23"
core-text = "20.1"
core-foundation = "0.9"
foreign-types = "0.5"
objc2 = "0.6"
objc2-foundation = "0.3"
objc2-app-kit = { version = "0.3", features = ["NSMenu", "NSMenuItem", "NSEvent", "NSApplication", "NSView", "NSWindow", "NSResponder", "NSColor"] }

[dev-dependencies]
tempfile = "3"
